--- a/.github/workflows/hook-build.yml
+++ b/.github/workflows/hook-build.yml
@@ -83,15 +83,23 @@ jobs:
       shell: cmd
       run: |
         call %GITHUB_WORKSPACE%\setup.bat
-        
-        cd %GITHUB_WORKSPACE%\Carbon.Core\Carbon.Hooks\Carbon.Hooks.Internal\Buildroot\Scripts
+
+        set ROOT=%GITHUB_WORKSPACE%\Carbon.Core\Carbon.Hooks\Carbon.Hooks.Internal\Buildroot\Scripts
 
         if %DEBUG% EQU true (
+            cd %ROOT%
+            echo Debug build is enabled.
             call build.bat Debug %BRANCH% %PROTOCOL% %OXIDE_HOOKS%
+        ) else (
+            echo Debug build is disabled.
         )
 
         if %RELEASE% EQU true (
+            cd %ROOT%
+            echo Release build is enabled.
             call build.bat Release %BRANCH% %PROTOCOL% %OXIDE_HOOKS%
+        ) else (
+            echo Release build is disabled.
         )
         
     - name: ⬆️ Artifacts - Upload
