--- a/.github/workflows/hook-build.yml
+++ b/.github/workflows/hook-build.yml
@@ -37,6 +37,12 @@ on:
         required: true
         default: 'false'
         type: boolean
+
+      oxide_hooks_override:
+        description: 'Oxide Hooks Override'
+        required: false
+        default: ''
+        type: string
         
 env:
   FTP_PWD: ${{ secrets.FTP_PWD }}
@@ -45,6 +51,7 @@ env:
   BRANCH: ${{ inputs.branch }}
   DEBUG_BUILD: ${{ inputs.debug }}
   RELEASE_BUILD: ${{ inputs.release }}
+  OXIDE_HOOKS_OVERRIDE: ${{ inputs.oxide_hooks_override }}
 
 jobs:
   bootstrap:
@@ -79,6 +86,11 @@ jobs:
         call %GITHUB_WORKSPACE%\setup.bat
 
         set OXIDE_HOOKS=https://carbonmod.gg/redist/oxide/%BRANCH%.opj
+
+        if NOT %OXIDE_HOOKS_OVERRIDE% EQU "" (
+            set OXIDE_HOOKS=%OXIDE_HOOKS_OVERRIDE%
+        )
+        
         set ROOT=%GITHUB_WORKSPACE%\Carbon.Core\Carbon.Hooks\Carbon.Hooks.Internal\Buildroot\Scripts
 
         if %DEBUG_BUILD% EQU true (
