--- a/.github/workflows/hook-build.yml
+++ b/.github/workflows/hook-build.yml
@@ -88,7 +88,7 @@ jobs:
 
         set OXIDE_HOOKS=https://carbonmod.gg/redist/oxide/%BRANCH%.opj
 
-        if NOT %OXIDE_HOOKS_OVERRIDE% EQU "" (
+        if NOT "%OXIDE_HOOKS_OVERRIDE%" EQU "" (
             set OXIDE_HOOKS=%OXIDE_HOOKS_OVERRIDE%
         )
         
