--- a/.github/workflows/hook-build.yml
+++ b/.github/workflows/hook-build.yml
@@ -104,7 +104,7 @@ jobs:
 
         if NOT "%OXIDE_HOOKS_OVERRIDE%" EQU "" (
             set OXIDE_HOOKS=%OXIDE_HOOKS_OVERRIDE%
-        )e
+        )
         
         set ROOT=%GITHUB_WORKSPACE%\Carbon.Core\Carbon.Hooks\Carbon.Hooks.Internal\Buildroot\Scripts
 
@@ -125,14 +125,7 @@ jobs:
         )
 
         call discord.bat %RUST_BRANCH% %PROTOCOL%
-
-  upload-windows:
-    name: ⬆️ Upload
-    needs: bootstrap
-    runs-on: windows-latest
-    continue-on-error: false
-    
-    steps:  
+        
     - name: ⬆️ Artifacts - Upload
       uses: actions/upload-artifact@v3
       with:
@@ -140,7 +133,7 @@ jobs:
         path: |
           Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/*
           
-    - name: ⬆️ FTP - Upload Debug - Carbon.Hooks.Community
+    - name: ⬆️ FTP - Upload Debug (Carbon.Hooks.Community)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.debug }}
       with:
@@ -150,7 +143,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/debug/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
         dest: "server/debug/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
 
-    - name: ⬆️ FTP - Upload DebugUnix - Carbon.Hooks.Community
+    - name: ⬆️ FTP - Upload DebugUnix (Carbon.Hooks.Community)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.debug }}
       with:
@@ -160,7 +153,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/debugunix/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
         dest: "server/debugunix/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
         
-    - name: ⬆️ FTP - Upload Debug - Carbon.Hooks.Oxide
+    - name: ⬆️ FTP - Upload Debug (Carbon.Hooks.Oxide)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.debug }}
       with:
@@ -170,7 +163,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/debug/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Oxide.dll"
         dest: "server/debug/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Oxide.dll"
 
-    - name: ⬆️ FTP - Upload DebugUnix - Carbon.Hooks.Oxide
+    - name: ⬆️ FTP - Upload DebugUnix (Carbon.Hooks.Oxide)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.debug }}
       with:
@@ -180,7 +173,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/debugunix/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Oxide.dll"
         dest: "server/debugunix/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Oxide.dll"
 
-    - name: ⬆️ FTP - Upload Release - Carbon.Hooks.Community
+    - name: ⬆️ FTP - Upload Release (Carbon.Hooks.Community)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.release }}
       with:
@@ -190,7 +183,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/release/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
         dest: "server/release/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
 
-    - name: ⬆️ FTP - Upload ReleaseUnix - Carbon.Hooks.Community
+    - name: ⬆️ FTP - Upload ReleaseUnix (Carbon.Hooks.Community)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.release }}
       with:
@@ -200,7 +193,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/releaseunix/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
         dest: "server/releaseunix/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Community.dll"
         
-    - name: ⬆️ FTP - Upload Release - Carbon.Hooks.Oxide
+    - name: ⬆️ FTP - Upload Release (Carbon.Hooks.Oxide)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.release }}
       with:
@@ -210,7 +203,7 @@ jobs:
         src: "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal/FTP/server/release/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Oxide.dll"
         dest: "server/release/${{ inputs.protocol }}/carbon/managed/hooks/Carbon.Hooks.Oxide.dll"
 
-    - name: ⬆️ FTP - Upload ReleaseUnix - Carbon.Hooks.Oxide
+    - name: ⬆️ FTP - Upload ReleaseUnix (Carbon.Hooks.Oxide)
       uses: tomasbkk/action-ftp-upload@v1.0
       if: ${{ inputs.release }}
       with:
