--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -92,8 +92,8 @@ jobs:
       shell: bash
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix "" "preview_build"
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix "" "preview_build"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix "PREVIEW" "preview_build"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix "PREVIEW" "preview_build"
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -147,8 +147,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug . preview_build
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal . preview_build
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug PREVIEW preview_build
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal PREVIEW preview_build
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
