--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -81,8 +81,8 @@ jobs:
         shell: bash
         run: |
           export VERSION=${{ needs.bootstrap.outputs.version }}
-          ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix "" "edge_build"
-          ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix "" "edge_build"
+          ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix "EDGE" "edge_build"
+          ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix "EDGE" "edge_build"
 
       - name: ⬆️ Upload the artifacts
         uses: actions/upload-artifact@v3
@@ -129,8 +129,8 @@ jobs:
         shell: cmd
         run: |
           set VERSION=${{ needs.bootstrap.outputs.version }}
-          call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug . edge_build
-          call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal . edge_build
+          call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug EDGE edge_build
+          call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal EDGE edge_build
 
       - name: ⬆️ Upload the artifacts
         uses: actions/upload-artifact@v3
