--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -23,6 +23,7 @@
 		<PackageReference Include="ICSharpCode.Decompiler" Version="8.2.0.7535" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-3.final" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.0-3.final" />
+		<PackageReference Include="SharpCompress" Version="0.32.2" />
 
 		<!-- Unity code analyzers -->
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.16.1">
