--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -35,12 +35,13 @@ jobs:
 
       - name: 📅 Prepare the environment
         id: step1
+        shell: bash
         run: |
           echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
           echo "clock=$(date +'%H:%M:%S')" >> $GITHUB_OUTPUT
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          echo "version=$(date +'1.%Y.%q%j.%M%S')" >> $GITHUB_OUTPUT
+          echo "version=2.$(curl -s https://carbonmod.gg/version?token=${{secrets.VERSIONS_TOKEN}})" >> $GITHUB_OUTPUT
 
   # BUILD LINUX ----------------------------------------------------------------
   build-linux:
