--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -44,7 +44,7 @@ jobs:
           echo "clock=$(date +'%H:%M:%S')" >> $GITHUB_OUTPUT
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          echo "version=$(date +'1.%Y.%q%j.%M%S')" >> $GITHUB_OUTPUT
+          echo "version=2.$(curl -s -L 'https://carbonmod.gg/version?token=${{secrets.VERSIONS_TOKEN}}').2" >> $GITHUB_OUTPUT
 
   # BUILD LINUX ----------------------------------------------------------------
   build-linux:
