--- a/.github/workflows/rust-aux01-build.yml
+++ b/.github/workflows/rust-aux01-build.yml
@@ -41,7 +41,7 @@ jobs:
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           echo "wipe=$( [ $(date +%u) -eq 4 ] && [ $(date +%d) -le 7 ] && echo true || echo false )" >> $GITHUB_OUTPUT
-          echo "version=$(date +'1.%Y.%q%j.%M%S')" >> $GITHUB_OUTPUT
+          echo "version=2.$(curl -s -L 'https://carbonmod.gg/version?token=${{secrets.VERSIONS_TOKEN}}').5" >> $GITHUB_OUTPUT
 
   # BUILD LINUX ----------------------------------------------------------------
   build-linux:
