Separate versions per Carbon branch

--- a/.github/workflows/rust-aux02-build.yml
+++ b/.github/workflows/rust-aux02-build.yml
@@ -41,7 +41,7 @@ jobs:
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           echo "wipe=$( [ $(date +%u) -eq 4 ] && [ $(date +%d) -le 7 ] && echo true || echo false )" >> $GITHUB_OUTPUT
-          echo "version=2.6.$(curl -s -L 'https://carbonmod.gg/version?token=${{secrets.VERSIONS_TOKEN}}')" >> $GITHUB_OUTPUT
+          echo "version=2.6.$(curl -s -L 'https://carbonmod.gg/version?id=aux02&token=${{secrets.VERSIONS_TOKEN}}')" >> $GITHUB_OUTPUT
 
   # BUILD LINUX ----------------------------------------------------------------
   build-linux:
