--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -28,7 +28,7 @@
 		<Authors>Carbon Community</Authors>
 		<Copyright>Copyright © 2022-$([System.DateTime]::Now.Year) $(Authors)</Copyright>
 		<PackageProjectUrl>https://discord.gg/carbonmod</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/CarbonCommunity/Carbon.Core</RepositoryUrl>
+		<RepositoryUrl>https://github.com/CarbonCommunity/Carbon</RepositoryUrl>
 		<Description>A very lightweight and modular Harmony-based modding framework</Description>
 	</PropertyGroup>
 
