--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -2,14 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<OutputPath>bin\$(Configuration)\</OutputPath>
-		<!--
-			Default version schema: 2023.3.28.1542
-
-			We expect the github released files to force the following version schema:
-			0.(year).(quarter)(doty).(minute)(second)
-			0.(20xx).(1..4)(001..366).(00..59)(00..59)
-		-->
-		<Version>$([System.DateTime]::UtcNow.ToString('yyyy.MM.dd.HHmm'))</Version>
+		<Version>2.0.0</Version>
 	</PropertyGroup>
 
 	<Choose>
