--- a/.github/workflows/rust-aux01-build.yml
+++ b/.github/workflows/rust-aux01-build.yml
@@ -89,8 +89,8 @@ jobs:
       shell: bash
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix AUX01 "rustbeta_aux01"
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix AUX01 "rustbeta_aux01"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix RUST_AUX01 "rustbeta_aux01"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix RUST_AUX01 "rustbeta_aux01"
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -143,8 +143,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug AUX01 rustbeta_aux01
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal AUX01 rustbeta_aux01
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug RUST_AUX01 rustbeta_aux01
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal RUST_AUX01 rustbeta_aux01
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
