Revert "Merging from develop"
This reverts commit 8c627538ddd3aa4308173bc441880cf027855294, reversing
changes made to b80957985befac4e907c5eea3ad5f31c507b4b17.

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -19,6 +19,7 @@
 	<ItemGroup>
 		<PackageReference Include="Mono.Cecil" Version="0.11.5" />
 		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.Common\Carbon.Common.csproj" Private="false" />
+		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.Common.Client\Carbon.Common.Client.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
