--- a/.gitmodules
+++ b/.gitmodules
@@ -18,6 +18,14 @@
 	path = Carbon.Core/Carbon.Components/Carbon.Bootstrap
 	url = https://github.com/CarbonCommunity/Carbon.Bootstrap.git
 	branch = .
+[submodule "Carbon.Core/Carbon.Components/Carbon.Common"]
+	path = Carbon.Core/Carbon.Components/Carbon.Common
+	url = https://github.com/CarbonCommunity/Carbon.Common.git
+	branch = .
+[submodule "Carbon.Core/Carbon.Components/Carbon.Common.Client"]
+	path = Carbon.Core/Carbon.Components/Carbon.Common.Client
+	url = https://github.com/CarbonCommunity/Carbon.Common.Client.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.SDK"]
 	path = Carbon.Core/Carbon.Components/Carbon.SDK
 	url = https://github.com/CarbonCommunity/Carbon.SDK.git
@@ -38,6 +46,10 @@
 	path = Carbon.Core/Carbon.Native
 	url = https://github.com/CarbonCommunity/Carbon.Native.git
 	branch = .
+[submodule "Carbon.Core/Carbon.Components/Carbon.Client"]
+	path = Carbon.Core/Carbon.Components/Carbon.Client
+	url = https://github.com/CarbonCommunity/Carbon.Client.git
+	branch = main
 [submodule "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal"]
 	path = Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal
 	url = https://github.com/CarbonCommunity/Carbon.Hooks.git
