--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -19,12 +19,17 @@
 		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.SDK\Carbon.SDK.csproj" Private="false" Condition="!$(Product.Contains('Carbon.SDK')) and !$(Product.Contains('Carbon.Compiler'))" />
 
 		<!-- Roslyn -->
-		<PackageReference Include="Roslynator.CSharp" Version="4.9.0" />
+		<PackageReference Include="Roslynator.CSharp" Version="4.12.4" />
 		<PackageReference Include="ICSharpCode.Decompiler" Version="8.2.0.7535" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-3.final" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.0-3.final" />
-		<PackageReference Include="SharpCompress" Version="0.32.2" />
-
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.10.0" />
+		<PackageReference Include="SharpCompress" Version="0.37.2" />
+		<PackageReference Include="Mono.Cecil" Version="0.11.5" />
+		<PackageReference Update="Microsoft.Unity.Analyzers" Version="1.19.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+		
 		<!-- Unity code analyzers -->
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.16.1">
 			<PrivateAssets>all</PrivateAssets>
