--- a/.gitmodules
+++ b/.gitmodules
@@ -41,7 +41,7 @@
 [submodule "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal"]
 	path = Carbon.Core/Carbon.Hooks/Carbon.Hooks.Internal
 	url = https://github.com/CarbonCommunity/Carbon.Hooks.git
-	branch = .
+	branch = main
 [submodule "Carbon.Core/Carbon.Native"]
 	path = Carbon.Core/Carbon.Native
 	url = https://github.com/CarbonCommunity/Carbon.Native.git
