Revert "Carbon.Native profile prod args"
This reverts commit f12782539f2b1b930862da2f269523752ded1fbb.

--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -73,7 +73,7 @@ jobs:
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
         command: build
-        args: --profile prod --target x86_64-unknown-linux-gnu
+        args: -r --target x86_64-unknown-linux-gnu
         directory: Carbon.Core/Carbon.Native
         
     - name: 🔨 Setup the Carbon build environment
@@ -156,7 +156,7 @@ jobs:
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
         command: build
-        args: --profile prod --target x86_64-pc-windows-msvc
+        args: -r --target x86_64-pc-windows-msvc
         directory: Carbon.Core/Carbon.Native
         
     - name: 🔨 Setup the Carbon build environment
