--- a/.gitmodules
+++ b/.gitmodules
@@ -49,6 +49,6 @@
 [submodule "Tools/DepotDownloader"]
 	path = Tools/DepotDownloader
 	url = https://github.com/CarbonCommunity/Carbon.Depot.git
-[submodule "Carbon.Core/Carbon.Components/Carbon.Client.Common"]
-	path = Carbon.Core/Carbon.Components/Carbon.Client.Common
-	url = https://github.com/CarbonCommunity/Carbon.Client.V2.Common.git
+[submodule "Carbon.Core/Carbon.Components/Carbon.Common.Client"]
+	path = Carbon.Core/Carbon.Components/Carbon.Common.Client
+	url = https://github.com/CarbonCommunity/Carbon.Common.Client.V2.git
